# conreq-multiagent

./: .dockerignore  .env.local.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: .env.example  README.md  langgraph.json  main.py  pyproject.toml
backend/app/: config.py  logging_config.py
backend/app/agent/: graph.py  llm_config.py  state.py
backend/app/agent/models/: data_context.py  knowledge_graph.py
backend/app/agent/nodes/: analysis.py  coordinator.py  elicitation.py  final.py  generic.py  orchestrator.py  specification.py  validation.py
backend/app/agent/prompts/: a01_orchestrator_intent_classification_prompt.py  analysis_synthesize_desired_behavior_prompt.py  analysis_whatif_questions_prompt.py  b01_elicitation_refine_business_need_prompt.py  b02_elicitation_generate_business_need_prompt.py  b03_elicitation_answer_contextual_questions_prompt.py  b04_elicitation_answer_whatif_questions_prompt.py  c01_analysis_contextual_questions_prompt.py  c02_analysis_synthesize_desired_behavior_prompt.py  c03_analysis_whatif_questions_prompt.py  c04_analysis_identify_uncertainty_prompt.py  c05_analysis_conjectural_hypothesis_prompt.py  d01_specification_conjectural_specification_prompt.py  d02_specification_conjectural_refinement_prompt.py  e01_validation_system_prompt.py  elicitation_answer_contextual_questions_prompt.py  elicitation_generate_positive_impact_prompt.py  elicitation_refine_positive_impact_prompt.py  f01_generic_tool_followup_prompt.py  f02_generic_response_prompt.py  specification_conjectural_refinement_prompt.py  specification_conjectural_specification_prompt.py
backend/app/agent/utils/: context_utils.py  nlp_entity_extractor.py  project_data.py
backend/app/models/: schemas.py
backend/app/routers/: agent.py  conjectural_requirements.py  profiles.py  projects.py  settings.py
backend/app/services/: conjectural_persistence.py  embedding_service.py  language_detector.py  requirement_extractor.py  supabase_client.py  text_translator.py  user_settings.py  vision_analyzer.py
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.web
(+76 files in other folders)
